# ESPSomfy-RTS-Homekit

./: .gitignore  .gitmodules  CMakeLists.txt  ConfigFile.cpp  ConfigSettings.cpp  ConfigSettings.h  GitOTA.cpp  HomeKit.cpp  HomeKit.h  MQTT.cpp  README.md  Sockets.cpp  Somfy.cpp  Somfy.h  SomfyNetwork.cpp  Web.cpp  bump_version.sh  eim_config.toml  partitions.csv  sdkconfig  sdkconfig.defaults
.claude/: settings.local.json
.github/workflows/: ci.yaml  release-homekit.yaml  release.yaml
components/ArduinoJson/: CMakeLists.txt
components/CC1101/: CMakeLists.txt  ELECHOUSE_CC1101_SRC_DRV.cpp
components/PubSubClient/: CMakeLists.txt
components/WebSockets/: CMakeLists.txt
data/: appversion  extras.js  index.html  index.js  main.css  settings.js  somfy.js  ui.js
documentation/: convert_chat.py  failedConnection.pcapng  homekitchat.json  search_json.sh
main/: AppConfig.h  CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  ConfigSettings.cpp  ConfigSettings.h  ControllerNetwork.cpp  ControllerNetwork.h  GitOTA.cpp  GitOTA.h  HomeKit.cpp  MQTT.cpp  MQTT.h  SSDP.cpp  SSDP.h  ShadeConfigFile.cpp  ShadeConfigFile.h  Sockets.cpp  Somfy.cpp  Somfy.h  SomfyController.cpp  SomfyFrame.cpp  SomfyRemote.cpp  SomfyShade.cpp  SomfyTransceiver.cpp  Utils.cpp  Utils.h  WResp.cpp  Web.cpp  Web.h  app_main.cpp  idf_component.yml  main.cpp
main/compat/: gpio.h  preferences.h  timing.h
main/somfy/: SomfyController.cpp  SomfyController.h  SomfyFrame.cpp  SomfyFrame.h  SomfyNetwork.cpp  SomfyNetwork.h  SomfyRemote.cpp  SomfyRemote.h  SomfyShade.cpp  SomfyShade.h  SomfyTransceiver.cpp  SomfyTransceiver.h
main/web/: Web.cpp  Web.h  WebGroups.cpp  WebHelpers.h  WebOTA.cpp  WebRooms.cpp  WebSettings.cpp  WebShades.cpp  WebUtils.cpp
